gateway/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: 692609349536.dkr.ecr.ap-northeast-2.amazonaws.com/spring-cloud-example
          imagePullPolicy: Always
          command: [ "java" ]
          args: [ "-jar", "gateway/build/libs/app.jar" ]
          ports:
            - containerPort: 8080
