gateway/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
spec:
  selector:
    app: gateway
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
